--- a/app/templates/rest_framework/base.html
+++ b/app/templates/rest_framework/base.html
@@ -17,6 +17,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a href="/" class="navbar-brand">Moto GP API</a>
             </div>
@@ -25,6 +27,8 @@
                     <li><a href="{% url 'carrera-list' %}">Carreras</a></li>
                     <li><a href="{% url 'campeonato-list' %}">Campeonato</a></li>
                     <li><a href="{% url 'documentacion-list' %}">Documentación</a></li>
+                    <li><a href="{% url 'piloto-list' %}">Piloto</a></li>
+                    <li><a href="{% url 'dashboard-list' %}">Dashboard</a></li>
                 </ul>
  
             </div>
