Modifica página inicial

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,30 +3,26 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Django</h1>
-    <p class="lead">Django is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>MOTOGP API</h1>
+    <p class="lead">Bienvenido a la API de MotoGP, Una API dedidaca a los amantes del mundo del Motor que estén interesados en desarrollar su aplicación o realizar estudios sobre los datos ofrecidos</p>
     <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            Django gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://www.djangobook.com/en/2.0/index.html">Learn more &raquo;</a></p>
+        <h2>Datos extraidos de la Web Oficial</h2>
+        <p>Los datos que publicamos son obtenidos o procesados de los datos originales publicados por MotoGP.</p>
+        <p><a class="btn btn-default" href="http://www.motogp.com/es">Visital la web Oficial</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="https://pypi.org/">Learn more &raquo;</a></p>
+        <h2>Documentación</h2>
+        <p>Consulte como realizar consultas de una manera cómoda e iteractiva mediante nuestra documentación Swagger</p>
+        <p><a class="btn btn-default" href="https://motogp-api.herokuapp.com/docs/">Ver Más</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Microsoft Azure</h2>
-        <p>You can easily publish to Microsoft Azure using Visual Studio. Find out how you can host your application using a free trial today.</p>
-        <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
+        <h2>Utiliza nuestra APP</h2>
+        <p>Si eres un aficionado de MotoGP que quiere conocer todos los datos desde 1949 hasta ahora desde la comodidad de tu dispositivo Android, no dudes en descargar nuestra aplicación</p>
+        <p><a class="btn btn-default" href="https://drive.google.com/open?id=1Zri1KvBA_hq1y_5E-3ACfiexsCQHWEdr">Descarga nuestro APK</a></p>
     </div>
 </div>
 
