Mejora página inicio

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>MOTOGP API</h1>
+    <h1><img src="logo.png" style="width:250px; height:250px" title="MotoGP API" alt="MotoGP-API"></h1>
     <p class="lead">Bienvenido a la API de MotoGP, Una API dedidaca a los amantes del mundo del Motor que estén interesados en desarrollar su aplicación o realizar estudios sobre los datos ofrecidos</p>
     <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
