--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand">MOTOGP API</a>
+                <a href="/" class="navbar-brand"><img src="logo.png" style="width:250px; height:250px" title="MotoGP API" alt="MotoGP-API"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -40,7 +40,7 @@
 {% block content %}{% endblock %}
         <hr/>
         <footer>
-            <p>&copy; {{ year }} - My Django Application</p>
+            <p>&copy; {{ year }} - MotoGP API</p>
         </footer>
     </div>
 
