Modifica enlace de la documentación

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,6 +5,8 @@
 <div class="jumbotron">
     <h1>MotoGP API</h1>
     <p class="lead">Bienvenido a la API de MotoGP, Una API dedidaca a los amantes del mundo del Motor que estén interesados en desarrollar su aplicación o realizar estudios sobre los datos ofrecidos</p>
+    <p>Consulte como realizar consultas de una manera cómoda e iteractiva mediante nuestra documentación Swagger</p>
+    <p><a href="https://motogp-api.herokuapp.com/docs/" class="btn btn-primary btn-large">Documentación</a></p>
 </div>
 
 <div class="row">
@@ -12,11 +14,6 @@
         <h2>Datos extraidos de la Web Oficial</h2>
         <p>Los datos que publicamos son obtenidos o procesados de los datos originales publicados por MotoGP.</p>
         <p><a class="btn btn-default" href="http://www.motogp.com/es">Visital la web Oficial</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Documentación</h2>
-        <p>Consulte como realizar consultas de una manera cómoda e iteractiva mediante nuestra documentación Swagger</p>
-        <p><a class="btn btn-default" href="https://motogp-api.herokuapp.com/docs/">Ver Más</a></p>
     </div>
     <div class="col-md-4">
         <h2>Utiliza nuestra APP</h2>
