--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - MOTOGP-API</title>
 </head>
-
+{% load staticfiles %}
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
