detalla mensaje de error

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -143,7 +143,8 @@ http://flickity.metafizzy.co
 	<div class="error-502">
 		<div class="error-502__text">
 			<h1>Error Inesperado<b>:(</b></h1>
-			<h2><p>Puedes volver a la página de inicio <a href="https://motogp-api.herokuapp.com">Inicio</a>.</p></h2>
+			<h2><p>Revise los parámetros de la URL, puede que esté intentando utilizar una operación no existente</a>.</p></h2>
+			<h3><p>Puedes volver a la página de inicio <a href="https://motogp-api.herokuapp.com">Inicio</a>.</p></h3>
 		</div>
 	</div>
 </div>
