--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - MOTOGP-API</title>
     {% load staticfiles %}
+	<link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
